Gabriel - 更新GC分析README文档内容，做了完善